feat(cosmos.testnet_services): command prefix

--- a/ansible_collections/cosmos/roles/testnet_services/tasks/get_faucet_vars.yml
+++ b/ansible_collections/cosmos/roles/testnet_services/tasks/get_faucet_vars.yml
@@ -2,7 +2,7 @@
 - name: Get faucet keys | {{ item }}
   containers.podman.podman_container_exec:
     name: "{{ item }}-node"
-    command: ./node keys show faucet --home /config
+    command: "{{ testnet_services_command_prefix | default('') }}./node keys show faucet --home /config"
     workdir: /app
   register: faucet_key
   loop: "{{ testnet_services_testnets }}"
