feat(cosmos.testnet_services): command prefix

--- a/ansible_collections/cosmos/roles/testnet_services/defaults/main.yml
+++ b/ansible_collections/cosmos/roles/testnet_services/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
+testnet_services_command_prefix:
 testnet_services_config_path: /root/.local/share/faucet
 testnet_services_config_dir: /mnt/container-volumes/
