--- a/ansible_collections/cosmos/roles/testnet/defaults/main.yaml
+++ b/ansible_collections/cosmos/roles/testnet/defaults/main.yaml
@@ -1,3 +1,4 @@
 ---
 testnet_config_dir: /mnt/container-volumes/{{ testnet_container_name }}/_data/config
 testnet_config_path: /root/.local/share/alloy
+testnet_docs_path: short-lived-testnets
