--- a/ansible_collections/cosmos/roles/testnet/tasks/configuration.yml
+++ b/ansible_collections/cosmos/roles/testnet/tasks/configuration.yml
@@ -15,88 +15,83 @@
             daemon_reload: true
             state: started
 
-        - name: Wait for container to be ready | {{ item.name | replace('-node', '') }}
+        - name: Configuration| Wait for container to be ready | {{ item.name | replace('-node', '') }}
           ansible.builtin.pause:
             seconds: 10
       rescue:
-        - name: Something went wrong | {{ item.name | replace('-node', '') }}
+        - name: Configuration | Something went wrong | {{ item.name | replace('-node', '') }}
           ansible.builtin.fail:
             msg: An error occured
           when: not ansible_check_mode
 
-    - name: Enforce tendermint namespace for consistency | {{ item.name | replace('-node', '') }}
-      ansible.builtin.lineinfile:
+    - name: Configuration | config.toml | {{ item.name | replace('-node', '') }}
+      ansible.builtin.replace:
         path: "{{ testnet_config_dir }}/config.toml"
-        regexp: namespace = "
-        line: namespace = "tendermint"
-        state: present
+        regexp: "{{ index.regexp }}"
+        replace: "{{ index.line }}"
       notify: Restart Cosmos node {{ testnet_container_name }}
+      loop:
+        # Enforce tendermint namespace for consistency
+        - regexp: ^namespace =.*$
+          line: namespace = "tendermint"
+        # Adjust Inbound Peers
+        - regexp: ^max_num_inbound_peers =.*$
+          line: max_num_inbound_peers = 80
+        # Adjust Outbound Peers
+        - regexp: ^max_num_outbound_peers =.*$
+          line: max_num_outbound_peers = 60
+        # Enable prometheus
+        - regexp: ^prometheus =.*$
+          line: prometheus = true
+        # Listen on 0.0.0.0 (RPC)
+        - regexp: (^\[rpc\]\n\n# TCP or UNIX socket address for the RPC server to listen on\n)laddr = "tcp://[^"]*"
+          line: \1laddr = "tcp://0.0.0.0:26657"
+        # Allow cross-domain requests
+        - regexp: ^cors_allowed_origins =.*$
+          line: cors_allowed_origins = ["*"]
+      loop_control:
+        loop_var: index
 
-    - name: Adjust Inbound Peers | {{ item.name | replace('-node', '') }}
-      ansible.builtin.lineinfile:
-        path: "{{ testnet_config_dir }}/config.toml"
-        regexp: max_num_inbound_peers
-        line: max_num_inbound_peers = 80
+    - name: Configuration | app.toml | generic | {{ item.name | replace('-node', '') }}
+      ansible.builtin.replace:
+        path: "{{ testnet_config_dir }}/app.toml"
+        regexp: "{{ index.regexp }}"
+        replace: "{{ index.line }}"
       notify: Restart Cosmos node {{ testnet_container_name }}
+      loop:
+        # Listen on 0.0.0.0 (gRPC)
+        - regexp: (^# Address defines the gRPC server address to bind to.\n)address = .*$
+          line: \1address = ":9090"
+      loop_control:
+        loop_var: index
 
-    - name: Adjust Outbound Peers | {{ item.name | replace('-node', '') }}
-      ansible.builtin.lineinfile:
-        path: "{{ testnet_config_dir }}/config.toml"
-        regexp: max_num_outbound_peers
-        line: max_num_outbound_peers = 60
-      notify: Restart Cosmos node {{ testnet_container_name }}
-
-    - name: Enable prometheus on the config.toml file | {{ item.name | replace('-node', '') }}
-      ansible.builtin.lineinfile:
-        path: "{{ testnet_config_dir }}/config.toml"
-        regexp: ^prometheus =
-        line: prometheus = true
-        state: present
-      notify: Restart Cosmos node {{ testnet_container_name }}
-
-    - name: Listen on 0.0.0.0 instead of localhost (RPC) | {{ item.name | replace('-node', '') }}
-      ansible.builtin.lineinfile:
-        path: "{{ testnet_config_dir }}/config.toml"
-        regexp: laddr = "tcp://127.0.0.1:26657"
-        line: laddr = "tcp://0.0.0.0:26657"
-      notify: Restart Cosmos node {{ testnet_container_name }}
-
-    - name: Listen on 0.0.0.0 instead of localhost (API) | {{ item.name | replace('-node', '') }}
+    - name: Configuration | app.toml | not v2 | {{ item.name | replace('-node', '') }}
       when: testnet_container_name != "v2-052-1-node"
-      ansible.builtin.lineinfile:
+      ansible.builtin.replace:
         path: "{{ testnet_config_dir }}/app.toml"
-        regexp: address = "tcp://localhost:1317"
-        line: address = "tcp://0.0.0.0:20017"
+        regexp: "{{ index.regexp }}"
+        replace: "{{ index.line }}"
       notify: Restart Cosmos node {{ testnet_container_name }}
+      loop:
+        # Listen on 0.0.0.0 instead of localhost (API)
+        - regexp: (^# Address defines the API server to listen on.\n)address = "tcp://[^"]*"
+          line: \1address = "tcp://0.0.0.0:1317"
+      loop_control:
+        loop_var: index
 
-    - name: Listen on 0.0.0.0 instead of localhost (gRPC) | {{ item.name | replace('-node', '') }}
-      ansible.builtin.lineinfile:
-        path: "{{ testnet_config_dir }}/app.toml"
-        regexp: address = ([''"])(localhost:9090)([''"])
-        line: address = "0.0.0.0:9090"
-      notify: Restart Cosmos node {{ testnet_container_name }}
-
-    - name: Listen on 0.0.0.0 instead of localhost (REST) | {{ item.name | replace('-node', '') }}
+    - name: Configuration | app.toml | v2 | {{ item.name | replace('-node', '') }}
       when: testnet_container_name == "v2-052-1-node"
-      ansible.builtin.lineinfile:
+      ansible.builtin.replace:
         path: "{{ testnet_config_dir }}/app.toml"
-        regexp: address = ([''"])(localhost:8080)([''"])
-        line: address = "0.0.0.0:8080"
+        regexp: "{{ index.regexp }}"
+        replace: "{{ index.line }}"
       notify: Restart Cosmos node {{ testnet_container_name }}
-
-    - name: Allow cross-domain requests | {{ item.name | replace('-node', '') }}
-      ansible.builtin.lineinfile:
-        path: "{{ testnet_config_dir }}/config.toml"
-        regexp: ^cors_allowed_origins =
-        line: cors_allowed_origins = ["*"]
-      notify: Restart Cosmos node {{ testnet_container_name }}
-
-    - name: Allow cross-domain requests | {{ item.name | replace('-node', '') }}
-      ansible.builtin.lineinfile:
-        path: "{{ testnet_config_dir }}/config.toml"
-        regexp: ^cors_allowed_origins =
-        line: cors_allowed_origins = ["*"]
-      notify: Restart Cosmos node {{ testnet_container_name }}
+      loop:
+        # Listen on 0.0.0.0 instead of localhost (gRPC-gateway)
+        - regexp: (^# Address defines the address the gRPC-gateway server binds to.\n)address = .*$
+          line: \1address = "0.0.0.0:1317"
+      loop_control:
+        loop_var: index
 
   rescue:
     - name: Healthchecks.io | Send a fail signal
