--- a/ansible_collections/servers/roles/configure_hosts/defaults/main.yml
+++ b/ansible_collections/servers/roles/configure_hosts/defaults/main.yml
@@ -2,3 +2,4 @@
 configure_hosts_quadlet_dir: /usr/share/containers/systemd
 configure_hosts_quadlet_volumes_dir: /var/lib/containers/storage/volumes
 configure_hosts_quadlet_volumes_mountpoint: /mnt/container-volumes
+configure_hosts_ufw_open_ssh: false
