--- a/ansible_collections/validators/roles/chain_celestia/handlers/main.yml
+++ b/ansible_collections/validators/roles/chain_celestia/handlers/main.yml
@@ -1,22 +1,27 @@
 ---
-- name: Restart celestia-app-{{ chain_celestia_network }}
+- name: Restart bridge-celestia-app-{{ chain_celestia_network }}
   ansible.builtin.systemd_service:
-    name: celestia-app-{{ chain_celestia_network }}
+    name: bridge-celestia-app-{{ chain_celestia_network }}
     state: restarted
 
-- name: Restart celestia-bridge-{{ chain_celestia_network }}
+- name: Restart bridge-celestia-node-{{ chain_celestia_network }}
   ansible.builtin.systemd_service:
-    name: celestia-bridge-{{ chain_celestia_network }}
+    name: bridge-celestia-node-{{ chain_celestia_network }}
     state: restarted
 
-- name: Restart cosmos-validator-watcher-{{ chain_celestia_chain_id }}
+- name: Restart validator-celestia-app-{{ chain_celestia_network }}
   ansible.builtin.systemd_service:
-    name: cosmos-validator-watcher-{{ chain_celestia_chain_id }}
+    name: validator-celestia-app-{{ chain_celestia_network }}
     state: restarted
 
-- name: Restart celestia-da-otel-collector-{{ chain_celestia_chain_id }}
+- name: Restart celestia-da-otel-collector-{{ chain_celestia_network }}
   ansible.builtin.systemd_service:
-    name: celestia-da-otel-collector-{{ chain_celestia_chain_id }}
+    name: celestia-da-otel-collector-{{ chain_celestia_network }}
+    state: restarted
+
+- name: Restart cosmos-validator-watcher-{{ chain_celestia_network }}
+  ansible.builtin.systemd_service:
+    name: cosmos-validator-watcher-{{ chain_celestia_network }}
     state: restarted
 
 - name: Restart alloy
